# PolyToEigen

./: CMakeLists.txt  PolyToEigen.sln  main.cpp
PolyToEigen/: CMakeLists.txt  LinearLS.cpp  LinearLS.h  Poly.cpp  Poly.h  PolyBase.cpp  PolyBase.h  PolyToEigen.vcxproj  PolyToEigen.vcxproj.filters  TriangulationBase.cpp  TriangulationBase.h  main.cpp
PolyToEigen/LinearLS.dSYM/Contents/: Info.plist
PolyToEigen/PolyBase.dSYM/Contents/: Info.plist
PolyToEigen/main.dSYM/Contents/Resources/DWARF/: main
include/: Poly.h  PolyBase.h  TriangulationBase.h
src/: LinearLS.cpp  Poly.cpp  PolyBase.cpp  TriangulationBase.cpp  main.cpp
